Replace `Set.of` with Java 8 compatible alternatives and update tests for better compatibility.